# Simple_Serial_Logger

./: Cargo.toml  readme.md
src/: main.rs
